# car_deepagent

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
agent-chat-ui/: .env.example  README.md  package.json  pnpm-lock.yaml
agent-chat-ui/scripts/: test-file-paths.mjs
agent-chat-ui/src/lib/: api-key.tsx  extract-loaded-skills.ts  extract-reasoning.ts  file-paths.ts  provenance.ts  repo-root.ts  sidebar-tools.ts  tool-labels.ts
agent-chat-ui/src/providers/: Stream.tsx  Thread.tsx
data/users/: U001.json  U002.json  U003.json
docs/interviews/: eval_long.md  eval_peer.md  eval_short.md  interview_001.docx  interview_001.md  interview_002.docx  interview_002.md  interview_003.docx  interview_003.md
scripts/: diag_long_interview.py  eval_interview_chain.py  generate_sample_docs.py  smoke_astream.py
skills/multi-report-synthesis/: SKILL.md
skills/single-report-analysis/: SKILL.md
skills/user-profile-lookup/: SKILL.md
src/car_deepagent/: __init__.py  analysis_docs.py  config.py  fs_permissions.py  graph.py  paths.py  skill_commands.py
tests/: test_analysis_docs.py  test_analysis_docs_middleware.py  test_config.py  test_doc_map.py  test_documents_markdown.py  test_fs_permissions.py  test_graph_builds.py  test_inspect_document.py  test_read_file_line_alignment.py  test_reasoning_model.py  test_report_analyst_digest.py  test_sample_docs_exist.py  test_skill_command_middleware.py  test_skill_commands.py  test_skills_exist.py  test_subagent_context.py  test_summary_tree.py  test_tokens.py  test_user_profile.py
(+34 files in other folders)
