[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "car-deepagent"
version = "0.1.0"
description = "HarmonyOS interview report analysis deep agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "deepagents>=0.4.0",
  "langchain-openai>=0.3.0",
  "langgraph>=0.4.0",
  "python-docx>=1.1.0",
  "python-dotenv>=1.0.0",
  "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
